<resources>
    <string name="app_name">Shopping List</string>
    <string name="delete_item_alert_title">Delete an Item</string>
    <string name="delete_item_alert_message">Do you want to delete "%1$s"?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="item_list_text_template">%1$s (%2$s)</string>
    <string name="item_list_time_template">%1$d Days %2$d Hrs</string>
    <string name="overdue">OVERDUE</string>
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="set_due_heading">Set Due Date and Time</string>
    <string name="cancel_question">Cancel?</string>
    <string name="cancel_edit_alert_message">Are you sure you want to cancel? Any changes will be lost if you do.</string>
    <string name="cancel_add_alert_message">Are you sure you want to cancel? No item will be created if you do.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>