<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="au.edu.sydney.comp5216.assignment1.AddOrEditItem" >
    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editItemButtonRow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/addOrEditAction"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_margin="5dp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/setItemName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/edit_item" />

            <EditText
                android:id="@+id/setItemName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@+id/addOrEditAction"
                app:layout_constraintBottom_toTopOf="@+id/setItemQuantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:autofillHints=""
                android:inputType="text"
                android:hint="@string/name">
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/setItemQuantity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@+id/setItemName"
                app:layout_constraintBottom_toTopOf="@id/datePickerHeading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:autofillHints=""
                android:inputType="text"
                android:hint="@string/quantity" />

            <TextView
                android:id="@+id/datePickerHeading"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_margin="5dp"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/setItemQuantity"
                app:layout_constraintBottom_toTopOf="@+id/setItemDueDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/set_due_heading" />

            <DatePicker
                android:id="@+id/setItemDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@+id/datePickerHeading"
                app:layout_constraintBottom_toTopOf="@id/setItemDueTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TimePicker
                android:id="@+id/setItemDueTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@+id/setItemDueDate"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/editItemButtonRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:id="@+id/itemCancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:onClick="onCancel"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/itemSaveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSubmit"
            android:layout_margin="5dp"
            android:text="@string/save" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>